mdapipkg/objects/Chapter_Health__c.object
<CustomObject>
    <fields>
        <fullName>Number_of_Completed_Member_M2Mx_Profiles__c</fullName>
        <label>Number of Completed Member M2Mx Profiles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Completed_Member_Profiles__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Completed Member Profiles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Completed_S_P_M2Mx_Profiles__c</fullName>
        <label>Number of Completed S/P M2Mx Profiles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Ed__c</fullName>
        <inlineHelpText>5- 9.5-10 (40% of events in FY13 were rated 9.5 or above) 
4- 9-9.4 (33% of events in FY13) 
3- 8.5-8.9 (15% of events in FY13) 
2- 8-8.4 (7% of events in FY13) 
1- below 8. (5% of events in FY13)</inlineHelpText>
        <label>Average Rating for Events YTD (1-5)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Events_in_Current_FY__c</fullName>
        <inlineHelpText>Has the chapter achieved min criteria or likely to? Yes or No system will allocate weighting</inlineHelpText>
        <label>Achieve Min. No. of Events in FY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Forums__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Forums</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Members__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Members (Deprecate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Members_in_Networks__c</fullName>
        <label>Number of Members in Networks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Network_Members__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Network Members</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Issues__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Open Issues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_S_P_in_Networks__c</fullName>
        <label>Number of S/P in Networks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Spouses_in_Networks__c</fullName>
        <description>Total count of spouse/partners in networks to be used in formula field calculation of percentage spouse/partners in networks</description>
        <label>Number of Spouses in Networks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_chapter_members_age_50_59__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of Chapter members having age in range of 50-59</description>
        <inlineHelpText>Number of members 50-59</inlineHelpText>
        <label># of members 50-59</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_chapter_members_age_60_69__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of Chapter members having age in range of 60-69</description>
        <inlineHelpText>Number of members 60-69</inlineHelpText>
        <label># of members 60-69</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_chapter_members_age_70__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of Chapter members having age 70+</description>
        <inlineHelpText>Number of members 70+</inlineHelpText>
        <label># of members 70+</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_completed_S_P_profiles__c</fullName>
        <description>This field is the total count of spouse partners with profile completion &gt;= 66%. This field will be used in the formula field % of completed spouse/partner profiles.</description>
        <label>Number of completed S/P profiles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_grandfathers_in_a_chapter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of chapter members having &apos;Is_Grandfather__c&apos; as true</description>
        <inlineHelpText>Current number of non-dues paying grandfathered members</inlineHelpText>
        <label>Non-dues paying grandfathered Members</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_members_in_forum__c</fullName>
        <description>Field is used in the % members participating in member forums calculation</description>
        <label>Number of members in forum</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O__c</fullName>
        <defaultValue>&quot;O - &quot;</defaultValue>
        <label>O -</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Officer_elect_identification_by_1Oct__c</fullName>
        <formula>IF(Count_Chapter_Chair_by_1_Nov__c + Count_of_Officers_Elect_by_1_Nov__c &gt;= 4, 3,
    IF(Count_Chapter_Chair_by_1_Nov__c + Count_of_Officers_Elect_by_1_Nov__c &gt;= 2, 2, 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>4 officer elects identified = Platinum, 
2-3 office elects identified = Silver, 
0-1 officer elects identified = Bronze</inlineHelpText>
        <label>Officer-elect identification by 1 Nov</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Health_Score__c</fullName>
        <inlineHelpText>18-30 points (inclusive of meeting all 3 minimum chapter standards) = Platinum Chapter, 
9-17 points = Silver Chapter, 
0-8 points = Bronze Chapter</inlineHelpText>
        <label>Overall Health Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pct_Chapter_Retention__c</fullName>
        <label>% Chapter Retention</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Forum_Fundamentals_Vouchers_redeemed__c</fullName>
        <formula>IF(Number_New_Members_Since_July_1__c &gt; 0, 
			Forum_Fundamentals_Vouchers_redeemed__c / (Number_New_Members_Since_July_1__c * 2),
			0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Forum Fundamentals Vouchers redeemed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Member_Children_Registered_for_YNG__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Member Children Registered for YNG+</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_S_P_Attend_YPO_Event__c</fullName>
        <formula>IF(Number_Spouse_Partners__c = 0, 0, of_Spouse_Partners_attending_YPO_Event__c / Number_Spouse_Partners__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Spouse/Partners attending YPO Event</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Spouse_Partners_w_Access_to_Exchange__c</fullName>
        <formula>IF(Number_Spouse_Partners__c = 0, 0, Number_S_P_with_Access_to_Exchange__c / Number_Spouse_Partners__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Spouse/Partners w/ Access to Exchange</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Spouse_Partners_w_Complete_Profile__c</fullName>
        <formula>IF(Number_Spouse_Partners__c = 0, 0, Num_Spouse_Partners_w_Complete_Profile__c / Number_Spouse_Partners__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Spouse/Partners w/Complete Profile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_of_Complete_Member_M2Mx_Profiles__c</fullName>
        <formula>IF(Number_Primary_Members_Current__c = 0, 0, Number_of_Completed_Member_M2Mx_Profiles__c / Number_Primary_Members_Current__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Complete Member M2Mx Profiles</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_of_Completed_S_P_M2Mx_Profiles__c</fullName>
        <formula>IF(Number_Spouse_Partners__c = 0, 0,  Number_of_Completed_S_P_M2Mx_Profiles__c / Number_Spouse_Partners__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Completed S/P M2Mx Profiles</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_of_Members_Participating_in_a_GCC__c</fullName>
        <formula>IF(Number_Primary_Members_Current__c = 0, 0, of_Members_Participating_in_a_GCC__c / Number_Primary_Members_Current__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Members Participating in a GCC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Per_Spouse_Partners_in_Forums__c</fullName>
        <formula>IF(Number_Spouse_Partners__c = 0, 0, Tot_Num_Spouse_Partners_Partic_in_Forum__c / Number_Spouse_Partners__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>%Spouse/Partners Participating in Forums</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_Members_in_Networks__c</fullName>
        <formula>IF(Number_Primary_Members_Current__c = 0, 0, Number_of_Members_in_Networks__c / Number_Primary_Members_Current__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Members in Networks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_SP_in_Networks__c</fullName>
        <formula>IF(Number_Spouse_Partners__c = 0, 0, Number_of_S_P_in_Networks__c / Number_Spouse_Partners__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Spouse/Partners in Networks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Can_Graduate_June_30__c</fullName>
        <formula>Number_Can_Graduate_June_30__c / Number_Primary_Members_Current__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of members eligible to graduate on 30 June</inlineHelpText>
        <label>% members eligible to graduate 30 June</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Chapter_Growth_Prev__c</fullName>
        <formula>IF(Num_Members_Prev_FY__c = 0, 0, 
    (Number_Pri_Sec_Members__c - Num_Members_Prev_FY__c) / Num_Members_Prev_FY__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of chapter growth (past FY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Chapter_Retention__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Chapter Retention</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Involuntary_Resignations__c</fullName>
        <formula>IF(Number_Pri_Sec_Members__c = 0, 0, Number_Resignations_Involuntary__c / Number_Pri_Sec_Members__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Involuntary Resignations for current fiscal year</inlineHelpText>
        <label>% involuntary resignations current FY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Members_Forums__c</fullName>
        <formula>IF(Number_Pri_Sec_Members__c = 0, 0, Total_Members_in_Forum__c / Number_Pri_Sec_Members__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Members Participating in Forums</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Members_Grace_Period__c</fullName>
        <formula>Number_Members_Grace_Period__c/(Number_Primary_Members_Current__c  + Number_Secondary_Members_Current__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of members on Grace Period</inlineHelpText>
        <label>% of members on Grace Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Members_in_Forums__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Percentage of members participating in member Forums</inlineHelpText>
        <label>% members in Forums DEPRECATED</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Members_in_Groups__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Percentage of members in Groups</inlineHelpText>
        <label>% of members in Groups</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Members_in_Networks__c</fullName>
        <description>Formula field to calculate percentage of members in networks based on Number of Network Members field and Number Pri/Sec Members total field.</description>
        <formula>Number_of_Network_Members__c /  Number_Pri_Sec_Members__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of members in Networks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Network_Members__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Percentage of members in Networks</inlineHelpText>
        <label>% of members in Networks</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Network_Spouses__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Percentage of spouses/partners in Networks</inlineHelpText>
        <label>% spouses/partners in Networks</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_New_Member_Vouchers_Used__c</fullName>
        <formula>IF(Total_NMV_Vouchers_Available__c = 0, 0, NMV_Vouchers_Used__c / Total_NMV_Vouchers_Available__c)</formula>
        <inlineHelpText>Percentage of New Member event vouchers used</inlineHelpText>
        <label>% of New Member Event Vouchers Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Participants_YPO_WPO_Events__c</fullName>
        <formula>IF(Number_Primary_Members_Current__c = 0, 0, Number_Participants_YPO_WPO_Events__c / Number_Primary_Members_Current__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Members attending YPO Event</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Profile_Complete__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Percentage Profile Complete</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Spouse_Exchange_Access__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is stamped by the chapter health daily batch with the total s/p&apos;s with Portal Access Level not equal to No access. It is used in the formula field calculation % of Spouse/Partners with Access to the Exchange</description>
        <inlineHelpText>Percentage of Spouse/Partners with Access to the Exchange</inlineHelpText>
        <label># Spouse/Partners w/ Access to Exchange</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage_Spouses_in_Groups__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Percentage of spouses/partners in Groups</inlineHelpText>
        <label>% of spouses/partners in Groups</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Total_Resignations__c</fullName>
        <formula>(Number_Resignations_Involuntary__c + Number_Resignations_Voluntary__c  )/ (Number_Primary_Members_Current__c + Number_Secondary_Members_Current__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Total Resignations</inlineHelpText>
        <label>% of total resignations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Trained_Officers__c</fullName>
        <formula>IF(Number_Chapter_Officers__c = 0, 0, Number_Trained_Officers__c / Number_Chapter_Officers__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Chapter Officers trained GLC/CLW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Voluntary_Resignations__c</fullName>
        <formula>Number_Resignations_Voluntary__c /(Number_Primary_Members_Current__c  + Number_Secondary_Members_Current__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Voluntary Resignations for current fiscal year</inlineHelpText>
        <label>% voluntary resignations current FY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Post_event_marketing_ideas__c</fullName>
        <label>Post event marketing ideas:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pre_event_marketing_ideas__c</fullName>
        <label>Pre event marketing ideas:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority_1__c</fullName>
        <label>Priority #1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority_2__c</fullName>
        <label>Priority #2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority_3__c</fullName>
        <label>Priority #3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Program Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Program_Submitted_for_Awards__c</fullName>
        <inlineHelpText>( # submitted/N)</inlineHelpText>
        <label>Program Submitted for Awards?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RBM_Participation_Limit_Green__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Regional Board Meeting Attendance</description>
        <inlineHelpText>Regional Board Meeting Attendance</inlineHelpText>
        <label>RBM Participation Limit Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RBM_Participation_Limit_Red__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Regional Board Meeting Attendance</description>
        <inlineHelpText>Regional Board Meeting Attendance</inlineHelpText>
        <label>RBM Participation Limit Red</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RBM_Participation_Limit_Yellow__c</fullName>
        <defaultValue>1</defaultValue>
        <description>RBM Participation Limit Yellow</description>
        <inlineHelpText>RBM Participation Limit Yellow</inlineHelpText>
        <label>RBM Participation Limit Yellow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Required for process builder</description>
        <formula>RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Chapters in this Region</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Health__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region Health</label>
        <referenceTo>Region_Health__c</referenceTo>
        <relationshipLabel>Chapter Health</relationshipLabel>
        <relationshipName>Chapter_Health</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Id__c</fullName>
        <formula>Region2__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_as_Text__c</fullName>
        <label>Region as Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Quarter__c</fullName>
        <inlineHelpText>Q1 = September 30th
Q2 = December 31st
Q3 = March 31st
Q4 = June 30th</inlineHelpText>
        <label>Report Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q-1</fullName>
                </value>
                <value>
                    <fullName>Q-2</fullName>
                </value>
                <value>
                    <fullName>Q-3</fullName>
                </value>
                <value>
                    <fullName>Q-4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Year_Text__c</fullName>
        <formula>TEXT(Report_Year__c)</formula>
        <label>Report Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Year__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Report Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_P_at_International_Family_Event__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Percentag of Spouse/Partners attending an International Family Event</inlineHelpText>
        <label>% S/P at International Family Event</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>S_Ps_attended_FMLD_since_1_July__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Spouse/Partners who have attended a FMLD program since 1 July</inlineHelpText>
        <label># S/Ps attended FMLD since 1 July</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signature_Event_Name_s__c</fullName>
        <label>Signature Event Name (s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Event__c</fullName>
        <inlineHelpText>Insert details of the curriculum category of the best event the chapter has run and why it was the best event with reference to the ECODE</inlineHelpText>
        <label>Signature/best event</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Spouse_Partner_Forum_Participation__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Percentage of spouse/partners participating in spouse/partner Forums</inlineHelpText>
        <label>Spouse/Partners participating in Forums</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Spouse_Partners_attending_YPO_Event__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Percentage of Spouse/Partners attending in YPO Event</inlineHelpText>
        <label>% Spouse/Partners attending YPO Event</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Spouse_Partners_w_Access_to_Exchange__c</fullName>
        <description>This is the formula field calculation of Percentage of Spouse/Partners with Access to Exchange. This field uses the number field which is stamped by the ch health batch for its calculation.</description>
        <formula>Percentage_Spouse_Exchange_Access__c /  Number_Spouse_Partners__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Spouse/Partners w/ Access to Exchange</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Spouse_Partners_w_Complete_Profile__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Percentage of Spouse/Partners with a &quot;Complete&quot; Profile</inlineHelpText>
        <label>% Spouse/Partners w/Complete Profile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Strategic_Plan_Posted_on_the_Exchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic Plan Posted on the Exchange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <formula>TEXT( Region2__r.Super_Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Super Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenure_Sum__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used in the calculation of average tenure - holds the aggregate tenure for the chapter.</description>
        <label>Tenure Sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tot_Num_Spouse_Partners_Partic_in_Forum__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total number of spouse/partners in Forum</inlineHelpText>
        <label>Total # of spouse/partners in Forum</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tot_num_of_Mem_in_Forum_no_secondary_mem__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total number of members in Forum (excluding secondary members)</inlineHelpText>
        <label>Tot num of Mem in Forum no secondary mem</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Members_in_Forum__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total number of members in Forum</inlineHelpText>
        <label>Total # of members in Forum</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_NMV_Vouchers_Available__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of new member vouchers available for a chapter, used for calculating percentage used.</description>
        <label>Total NMV Vouchers Available</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_Chapter_Events__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total number of Chapter Events</inlineHelpText>
        <label>Total # of Chapter Events</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_Resignations__c</fullName>
        <formula>Number_Resignations_Involuntary__c + Number_Resignations_Voluntary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Number of Resignations</inlineHelpText>
        <label>Total # of resignations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_Spouses_in_Forums__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total number of spouse/partners in Forum</inlineHelpText>
        <label>Total # of S/P in Forum DEPRECATED</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Future</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Chapter_Name__c</fullName>
        <label>Unique Chapter Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vice_Ed_Chair_Email__c</fullName>
        <formula>Vice_Ed_Chair_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vice Ed Chair Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vice_Ed_Chair_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vice Ed Chair Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Vice Ed Chair Name on this Account</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vice_Ed_Chair_Phone_Number__c</fullName>
        <formula>CASE( Vice_Ed_Chair_Name__r.Preferred_Phone__c , &quot;Business Phone&quot;, Vice_Ed_Chair_Name__r.Phone , &quot;Mobile Phone&quot;, Vice_Ed_Chair_Name__r.MobilePhone , &quot;Home Phone&quot;, Vice_Ed_Chair_Name__r.HomePhone , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vice Ed Chair Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vice_Ed_Chair_past_Champion_Roles_Awar__c</fullName>
        <label>Vice Ed Chair past Champion Roles &amp; Awar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vice_Ed_Chair_reg_for_GLC_or_Regn_Train__c</fullName>
        <inlineHelpText>(GLC/Reg/ No)</inlineHelpText>
        <label>Vice Ed Chair reg for GLC or Regn Train</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>